--- a/index.html
+++ b/index.html
@@ -15,15 +15,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
-
     <link rel="apple-touch-icon" sizes="180x180" href="favicon.jpg">
     <link rel="icon" type="image/jpg" sizes="32x32" href="favicon.jpg">
     <link rel="icon" type="image/jpg" sizes="16x16" href="favicon.jpg">
     <link rel="manifest" href="site.webmanifest">
-
-
-
-
 </head>
 
 <body id="top">
@@ -124,12 +119,17 @@
                                 <div class="timeline__desc">
                                     <p>A high-standard IT training program by DBS Foundation and Dicoding to prepare
                                         graduates with workforce-ready skills since 2022.</p>
+                                    <ul>
+                                        <li>Selected candidates from 3.000 accepted participants out of a total of
+                                            60.000+ applicants.</li>
+                                    </ul>
                                 </div>
                             </div>
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Bangkit Academy</h3>
+                                    <h4 class="timeline__title">Bangkit Academy led by Google, Tokopedia, Gojek, &
+                                        Traveloka</h3>
                                         <h5 class="timeline__meta">Cloud Computing Cohort</h5>
                                         <p class="timeline__timeframe">Sep 2024 - Jan 2025</p>
                                 </div>
@@ -850,13 +850,13 @@
                     </svg> <br>
                 </p>
             </div>
-            <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
+            <!-- <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                 <h3 class="text-pretitle">Social Media</h3>
                 <ul class="contact-social">
-                    <!-- <li><a href="https://www.linkedin.com/in/hafizaryan/" target="_blank">Linkedin</a></li> -->
+                    <li><a href="https://www.linkedin.com/in/hafizaryan/" target="_blank">Linkedin</a></li>
                     <li><a href="link.html" target="_blank">View More</a></li>
                 </ul>
-            </div>
+            </div> -->
             <!-- <div class="column lg-4 md-12 contact-block">
                 <a href="mailto:hafizaryansiregar@gmail.com"
                     class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
@@ -868,7 +868,7 @@
         <div class="row">
             <div class="column ss-copyright">
                 <span>Hafiz Aryan Siregar</span>
-                <span>Updated on: Feb 26, 2025</span>
+                <span>Last Updated: Feb 27, 2025</span>
                 <span>
                     <div class="status-container">
                         <div class="status-indicator"></div>
