--- a/link.html
+++ b/link.html
@@ -5,14 +5,18 @@
     <meta charset="utf-8">
     <title>Hafiz Aryan Siregar</title>
     <meta name="description"
-        content="Portfolio of Hafiz Aryan Siregar, a tech enthusiast with experience in web development, software testing, and cloud computing.">
+        content="Portfolio Hafiz Aryan Siregar, Mahasiswa UIN Suska Riau yang berpengalaman dalam pengembangan web, pengujian perangkat lunak, dan komputasi awan. Temukan proyek dan pencapaian terbaru.">
     <meta name="author" content="Hafiz Aryan Siregar">
-    <meta name="keywords" content="Hafiz Aryan Siregar, portfolio, web development, cloud computing, software testing">
+    <meta name="keywords"
+        content="Hafiz Aryan Siregar, Portfolio Hafiz Aryan Siregar, Hafiz Aryan Siregar UIN Suska, Web Developer Riau, Cloud Computing Pekanbaru, Software Tester Indonesia">
     <meta property="og:title" content="Hafiz Aryan Siregar">
     <meta property="og:description"
-        content="Explore the portfolio of Hafiz Aryan Siregar, showcasing projects in web development, cloud computing, and software testing.">
+        content="Portfolio Hafiz Aryan Siregar, Mahasiswa UIN Suska Riau yang berpengalaman dalam pengembangan web, pengujian perangkat lunak, dan komputasi awan.">
     <meta property="og:url" content="https://hafizaryan.netlify.app">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Hafiz Aryan Siregar Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="https://hafizaryan.netlify.app">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/link_styles.css">
