--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Hafiz Aryan Siregar</title>
+    <meta http-equiv="refresh" content="0;url=https://hafizaryansiregar.me">
     <meta name="description"
         content="Portfolio of Hafiz Aryan Siregar, a tech enthusiast with experience in web development, software testing, and cloud computing.">
     <meta name="author" content="Hafiz Aryan Siregar">
